--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "next-js-udemy",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0",
+    "pnpm": ">=8.15.5",
+    "npm": "Please use pnpm for this repo.",
+    "yarn": "Please use pnpm for this repo."
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,12 +22,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "clsx": "^2.1.0",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
@@ -31,6 +38,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5.4.3",
+    "typescript-eslint": "^7.6.0"
   }
 }
