--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@eslint/js": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
