--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-udemy",
+  "name": "next-js-15-template",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -16,12 +16,12 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "pnpm": "^9.7.1",
+    "next": "15.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "next": "15.2.2",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.9.0",
@@ -31,7 +31,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.2.2",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
     "postcss": "^8.4.41",
