--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,3 @@
 {
-  "plugins": ["@typescript-eslint"],
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:@next/next/recommended"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/ban-ts-comment": "warn",
-    "@typescript-eslint/no-explicit-any": "warn"
-  }
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
