--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "next-js-15-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "engines": {
-    "node": ">=18.17.0",
-    "pnpm": ">=8.15.5",
+    "node": ">=22.0.0",
+    "pnpm": ">=9.0.0",
     "npm": "Please use pnpm for this repo.",
     "yarn": "Please use pnpm for this repo."
   },
@@ -16,29 +17,27 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "15.2.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^15.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "next": "15.2.2",
-    "@eslint/js": "^9.9.0",
-    "@types/node": "^22.4.2",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.9.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.1.5",
-    "postcss": "^8.4.41",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.10",
+    "husky": "^9.1.6",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.15.0"
   }
 }
